--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ https://play.denver1769.in/J/Jtv4.mpd?id=165
 #EXTINF:-1 tvg-id="166" tvg-language="Telugu" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Cartoon_Network_Telugu.png" group-title="Kids",Cartoon Network Telugu
 https://play.denver1769.in/J/Jtv4.mpd?id=166
 
- #EXTINF:-1 tvg-id="" group-logo="https://i.imghippo.com/files/UUD5l1723291546.jpg" group-title="ðŸ“¥ Telegram Contact" tvg-logo="https://i.imghippo.com/files/UUD5l1723291546.jpg", t.me/TataplayLinks
+ #EXTINF:-1 tvg-id="" group-logo="https://i.imghippo.com/files/UUD5l1723291546.jpg" group-title="Telegram Contact" tvg-logo="https://i.imghippo.com/files/UUD5l1723291546.jpg", t.me/TataplayLinks
 https://t.me/tataplaylinks.mpd
 
  
@@ -800,7 +800,7 @@ https://play.denver1769.in/J/Jtv4.mpd?id=291
 #EXTINF:-1 tvg-id="383" tvg-language="English" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Times_NOW.png" group-title="News",Times NOW
 https://play.denver1769.in/J/Jtv4.mpd?id=383
 
-#EXTINF:-1 tvg-id="" group-logo="https://i.imghippo.com/files/gz4Fk1727854457.jpg" group-title="ðŸ“¥ Telegram Contact" tvg-logo="https://i.imghippo.com/files/gz4Fk1727854457.jpg", t.me/TataplayLinks
+#EXTINF:-1 tvg-id="" group-logo="https://i.imghippo.com/files/gz4Fk1727854457.jpg" group-title="Telegram Contact" tvg-logo="https://i.imghippo.com/files/gz4Fk1727854457.jpg", t.me/TataplayLinks
 https://t.me/tataplaylinks.mpd
 
  
