--- a/index.html
+++ b/index.html
@@ -5834,4 +5834,8 @@ https://play.denver1769.in/J/Jtv4.mpd?id=3072
 #EXTINF:-1 tvg-id="3073" tvg-language="Odia" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Ekamra_Manoranjan.png" group-title="Entertainment",Ekamra Manoranjan
 https://play.denver1769.in/J/Jtv4.mpd?id=3073
 
- 
+#EXTVLCOPT:http-user-agent=DevilBhai/5.0 AppleWebKit/534.46.0
+#KODIPROP:inputstream.adaptive.license_type=org.w3.clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://tsdevil.fun/tplay-api/catchup.key?id=114
+#EXTINF:-1 tvg-id="114" tvg-logo="https://mediaready.videoready.tv/tatasky-epg/image/fetch/f_auto,fl_lossy,q_auto,h_250,w_250/https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-1356-j5tdnwmw-v1/imageContent-1356-j5tdnwmw-m1.png" group-title="Kids",Disney
+https://tsdevil.fun/tplay-api/catchup.mpd?id=114
