--- a/index.html
+++ b/index.html
@@ -32,3 +32,65 @@ https://t.me/tataplaylinks.mpd
 
 #EXTINF:-1 tvg-id="" group-logo="https://i.imghippo.com/files/gz4Fk1727854457.jpg" group-title="👉🏻Visit Tataplaylinks On Telegram👈🏻" tvg-logo="https://i.imghippo.com/files/gz4Fk1727854457.jpg", t.me/TataplayLinks
 https://t.me/tataplaylinks.mpd
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3062
+#EXTINF:-1 tvg-id="3062" tvg-language="Hindi" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/HR_Tashan_Music.png" group-title="JIOTV⭕||Infotainment",Haryana Tashan Music
+https://jtvrec.playlivtv.workers.dev/?id=3062
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3063
+#EXTINF:-1 tvg-id="3063" tvg-language="Hindi" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/PR_News.png" group-title="JIOTV⭕||News",PR News
+https://jtvrec.playlivtv.workers.dev/?id=3063
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3064
+#EXTINF:-1 tvg-id="3064" tvg-language="Hindi" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Nav_Sanskruti_News.png" group-title="JIOTV⭕||News",Navsarjan Sanskruti News
+https://jtvrec.playlivtv.workers.dev/?id=3064
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3065
+#EXTINF:-1 tvg-id="3065" tvg-language="Hindi" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Bharat_Nation.png" group-title="JIOTV⭕||News",Bharat Nation
+https://jtvrec.playlivtv.workers.dev/?id=3065
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3066
+#EXTINF:-1 tvg-id="3066" tvg-language="Hindi" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Today_TV24_UPUK.png" group-title="JIOTV⭕||News",Today 24 News UPUK
+https://jtvrec.playlivtv.workers.dev/?id=3066
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3067
+#EXTINF:-1 tvg-id="3067" tvg-language="Hindi" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/India_Superfast.png" group-title="JIOTV⭕||News",India Superfast
+https://jtvrec.playlivtv.workers.dev/?id=3067
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3068
+#EXTINF:-1 tvg-id="3068" tvg-language="Hindi" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Bharat_Update.png" group-title="JIOTV⭕||News",Bharat Update
+https://jtvrec.playlivtv.workers.dev/?id=3068
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3069
+#EXTINF:-1 tvg-id="3069" tvg-language="Bhojpuri" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Raapchik.png" group-title="JIOTV⭕||Entertainment",Raapchik
+https://jtvrec.playlivtv.workers.dev/?id=3069
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3070
+#EXTINF:-1 tvg-id="3070" tvg-language="Hindi" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Vistaar_News.png" group-title="JIOTV⭕||News",Vistaar News
+https://jtvrec.playlivtv.workers.dev/?id=3070
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3071
+#EXTINF:-1 tvg-id="3071" tvg-language="Hindi" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/TV_Asia.png" group-title="JIOTV⭕||Entertainment",TV Asia Powered by Shemaroo
+https://jtvrec.playlivtv.workers.dev/?id=3071
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3072
+#EXTINF:-1 tvg-id="3072" tvg-language="Odia" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Shree_Jagannath_TV.png" group-title="JIOTV⭕||Devotional",Shree Jagannath TV
+https://jtvrec.playlivtv.workers.dev/?id=3072
+
+#KODIPROP:inputstream.adaptive.license_type=clearkey
+#KODIPROP:inputstream.adaptive.license_key=https://play.denver1769.in/J/KeyLelo.php?id=3073
+#EXTINF:-1 tvg-id="3073" tvg-language="Odia" tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/Ekamra_Manoranjan.png" group-title="JIOTV⭕||Entertainment",Ekamra Manoranjan
+https://jtvrec.playlivtv.workers.dev/?id=3073
+
+
